feat(register, user, README): finish registration and user management api with Role permission middleware
