# docs/swagger.json
@@ -30,6 +30,44 @@
                 }
             }
         },
+        "/api/users/qr/{id}": {
+            "get": {
+                "description": "Retrieve a user by its ID",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get user by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.User"
+                        }
+                    },
+                    "404": {
+                        "description": "User not found",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to fetch user",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/users/register": {
             "post": {
                 "security": [
@@ -39,7 +77,7 @@
                 ],
                 "description": "Register a new user in the system",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -47,13 +85,65 @@
                 "summary": "Register a new user",
                 "parameters": [
                     {
-                        "description": "User data",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/domain.User"
-                        }
+                        "type": "string",
+                        "description": "User Name",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User Email",
+                        "name": "email",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User Phone",
+                        "name": "phone",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User University",
+                        "name": "university",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Jersey Size",
+                        "name": "sizeJersey",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Food Limitation",
+                        "name": "foodLimitation",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Invitation Code",
+                        "name": "invitationCode",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "User State",
+                        "name": "state",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "User Image",
+                        "name": "image",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -200,6 +290,9 @@
                 "accessToken": {
                     "type": "string"
                 },
+                "qrUrl": {
+                    "type": "string"
+                },
                 "refreshToken": {
                     "type": "string"
                 },
@@ -225,6 +318,9 @@
                 },
                 "invitationCode": {
                     "type": "string"
+                },
+                "isEntered": {
+                    "type": "boolean"
                 },
                 "name": {
                     "type": "string"
